# league-lobby-revealer

./: Cargo.toml  README.md
src/: main.rs  player_stats_provider.rs  player_stats_providers.rs  riot_api.rs  riot_api_credentials.rs  riot_api_structs.rs  string_extension.rs  url_encoder.rs  wmi_manager.rs
src/player_stats_providers/: stat_provider_deeplolgg.rs  stat_provider_opgg.rs  stat_provider_porofessorgg.rs  stat_provider_porogg.rs  stat_provider_ugg.rs
src/riot_api_structs/: chat_participant.rs  chat_v1_session.rs  chat_v5_participants.rs  lol_champ_select_action.rs  lol_champ_select_legacy_v1_session.rs  lol_champ_select_v1_session.rs  riot_client_region_locale.rs
