[package]
name = "league-lobby-revealer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
console = "*"
reqwest = { version = "0.11", features = ["blocking", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.windows]
version = "*"
features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Wmi",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Rpc",
    "Win32_Security",
    "Win32_System_Variant",
]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
